log
Wed 24 Apr 2024 07:20:49 PM UTC: 
 tests:  0|6
total_score: 0/70
ab9b396
Wed 24 Apr 2024 07:34:32 PM UTC: 
 hashmap.c | 37 +++++++++++++++++++++++++++++++------
 1 file changed, 31 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:19: error: ‘Pair’ has no member named ‘next’
   54 |     while (current->next != NULL)
      |                   ^~
hashmap.c:62:12: error: ‘Pair’ has no member named ‘next’
   62 |     current->next = createPair(key, value);
      |            ^~
Compilation failed
ddc3164
Wed 24 Apr 2024 07:47:33 PM UTC: 
 hashmap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  4|5
total_score: 20/70
d79dd11
Wed 24 Apr 2024 07:54:20 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c:88:11: error: redefinition of ‘createMap’
   88 | HashMap * createMap(long capacity)
      |           ^~~~~~~~~
hashmap.c:41:11: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   41 | HashMap * createMap(long capacity)
      |           ^~~~~~~~~
Compilation failed
a25e227
Wed 24 Apr 2024 07:55:12 PM UTC: 
 hashmap.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 30/70
4fae10d
Wed 24 Apr 2024 07:56:36 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
699e224
Wed 24 Apr 2024 07:58:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:79:9: error: ‘aux’ undeclared (first use in this function)
   79 |     if (aux[i] != NULL)
      |         ^~~
hashmap.c:79:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:73:11: error: unused variable ‘auxValor’ [-Werror=unused-variable]
   73 |   Pair ** auxValor = map->buckets;
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a82548b
Wed 24 Apr 2024 07:58:58 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 40/70
59dff1a
